<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="10"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_new"
        android:title="@string/new_note"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="20"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search_note"
        android:title="@string/search_in_note"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="30"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_notes"
        android:title="@string/notes"
        android:orderInCategory="40"
        android:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_undo"
        android:title="@string/undo"
        android:icon="@drawable/ic_undo"
        android:orderInCategory="50"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_redo"
        android:title="@string/redo"
        android:icon="@drawable/ic_redo"
        android:orderInCategory="60"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="70"
        android:showAsAction="ifRoom" />

</menu>
